Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION pre-2.1.9:
============================

 Jose Kahan (Aug  18, 2003)
  - Made the links to the different indexes show the index of the current entry.
    This change originated from the feedback we got on the WAI enhanced archievs.
    People find that this small changes increases the usability of the archive.

 Jose Kahan (Aug  18, 2003)
  - The links to the first message (aka #first) were not working in the
    by attachment, by author, and by subject indexes.

 Peter McCluskey (Aug 16, 2003)
  - applied fix from Jean-Charles Meyrignac to handle 0x1A in mbox.

 Jose Kahan (Aug  14, 2003)
  - After receiving more feedback, reverted the changes done for converting the
    displayed value of the Date: header. The reason is that users like to know
    when they send a message. This information was getting lost because we
    were converting the date to the local time.
  - Made the Received on date be  shown in converted local time.
  - Added a new configuration option, indexdateformat, so that people can
    specify a different format for indexes than the one used elsewhere. If this
    variable is not defined., it'll use the dateformat by default.
  - Made the index by date compare dates independently of the value of dateformat.

 Jose Kahan (Aug  13, 2003)
  - Made the Received on footnote line use the same date format as that used for the
    Date: header on top of the messages.

 Jose Kahan (Aug  18, 2003)
  - Small WAI change to the list of indexes to show the entry corresponding to 
    the current index, but outside of a link. This comes from feedback, where 
    people said it was less distracting to see the same index to links all 
    the time.

 Jose Kahan (Aug  18, 2003)
  - Add the <title> WAI enhancement that I had forgotten to do for messages.
    The new format is: [subject] from [author] on [date] ([mailing list label]).